<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Pref Prototype</string>
    <string name="not_found_label">Page not found :C</string>
    <string name="not_found_desc">The page you want is not yet ready to launch. Sorry.</string>
    <string name="conf_tag">Settings</string>
    <string name="home_label">Home</string>
    <string name="tour_label">What to do</string>
    <string name="lodging_label">Lodging</string>
    <string name="eat_label">Where to Eat</string>
    <string name="services_label">Public Services</string>
    <string name="log_label">Log In</string>
    <string name="splash_title">City Hall App</string>
    <string name="splash_sub">Debug version 0.0.25</string>
    <string-array name="tour_list">
        <item>beaches</item>
        <item>ponds</item>
        <item>observatories</item>
        <item>waterfalls</item>
        <item>culture</item>
        <item>parks</item>
        <item>wind farms</item>
    </string-array>
    <string-array name="lodge_list">
        <item>hotels</item>
        <item>pousadas</item>
        <item>albergues</item>
        <item>motels</item>
        <item>campings</item>
    </string-array>
    <string-array name="eat_list">
        <item>restaurants</item>
        <item>pubs</item>
        <item>colonial cafes</item>
        <item>homemade cooking</item>
        <item>Pizzerias</item>
        <item>Snacks</item>
        <item>Churrascarias</item>
        <item>Buffets</item>
    </string-array>
    <string-array name="services_list">
        <item>Security</item>
        <item>Health</item>
        <item>Transport</item>
    </string-array>
    <string name="search_bar_label">Search...</string>
    <string name="month_label">June</string>
    <string name="places_label">Hottest Places</string>
    <string name="events_label">Hottest Events</string>
    <string name="bottom_main_label">Licensed by Osório City Hall</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="header_title">Anonymous</string>
    <string name="header_subtitle">Log in to gain access to establishment? edition</string>
    <string name="conf_log_title">Owner of an establishment?</string>
    <string name="conf_log_subtitle">Log in or request a new app account to edit your store\'s info!</string>
    <string name="reg_but">Register</string>
    <string-array name="menu_Items">
        <item>Languages</item>
        <item>History</item>
        <item>Favourites</item>
        <item>Edit Info</item>
        <item>Send Feedback</item>
        <item>Credits</item>
    </string-array>
    <string-array name="languages_list">
        <item>English</item>
        <item>Portuguese</item>
        <item>Spanish</item>
    </string-array>
    <string name="feedback_title" translatable="false">Feedback</string>
    <string name="feedback_rad_name">My name</string>
    <string name="feedback_rad_nony">Anonymous</string>
    <string name="feedback_name_label">Name:</string>
    <string name="feedback_desc_label">Description:</string>
    <string name="send_label">send</string>
    <string name="feedback_toast">Your feedback was sent successfully!</string>
    <string name="log_title" translatable="false">Login</string>
    <string name="log_email" translatable="false">Email: </string>
    <string name="log_password">Password: </string>
    <string name="log_toast">You\'re logged in!</string>
    <string name="dev_toast">In development...</string>
    <string name="about_label">Meet the city</string>
    <string name="sample_text" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis nunc quis elit egestas porta. Aenean pellentesque urna ac odio rhoncus, eu ultricies nisi feugiat. Sed imperdiet massa sit amet eros dictum, porttitor porttitor lacus rhoncus. Cras ac metus condimentum, tempor magna mattis, venenatis est. Etiam ut leo mattis, suscipit dolor sed, interdum libero. Maecenas ultrices tortor id leo dictum commodo. Curabitur nec justo eget enim molestie tristique. Praesent tristique pellentesque eros, non cursus tortor viverra a. Vestibulum dapibus nibh in urna sodales, ut interdum turpis dictum.
        \nDonec id porta sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim purus rhoncus justo scelerisque blandit. Nullam consequat pellentesque tempor. Fusce quam ante, rutrum eu turpis eget, ullamcorper interdum enim. Curabitur consectetur urna at mi fermentum, a blandit turpis laoreet. Vivamus faucibus pharetra nunc efficitur mollis. Praesent arcu erat, consectetur at vestibulum non, tempor non urna. Nullam nec aliquet est, eu commodo massa. Morbi tellus urna, ultrices a malesuada vitae, ultricies in magna. Morbi eget ante consectetur, tincidunt nibh vel, pharetra est. Quisque condimentum vulputate velit, in ultrices orci consequat et. Nunc quis porttitor augue, et tincidunt enim. Etiam sit amet consequat sapien.
        \nSuspendisse vel arcu eget tortor suscipit iaculis. Sed vel sapien id diam tincidunt volutpat et sit amet lacus. Donec ornare erat odio, non placerat augue hendrerit quis. Vivamus pellentesque consequat lorem vitae porttitor. Curabitur quis congue mi. Pellentesque a diam id purus efficitur gravida sit amet ac dolor. Donec eleifend semper rhoncus. Integer convallis nibh non dolor molestie, at pellentesque urna porta. Proin sed condimentum nunc.
        \nNulla vestibulum, nunc vel malesuada maximus, leo purus luctus arcu, quis consectetur leo urna nec erat. Cras mollis convallis libero ac lacinia. Quisque auctor venenatis condimentum. Morbi eget nisl in lacus euismod scelerisque eget semper nisl. Aliquam egestas felis eget porta consequat. Nunc ac libero a nulla consectetur sagittis. Integer scelerisque, metus eget accumsan posuere, nisi orci dapibus risus, et volutpat sem arcu sit amet lacus. Suspendisse potenti. Etiam a justo magna. Nullam ut blandit lorem.
        \nPraesent maximus at enim at aliquam. Duis ex leo, pretium a justo vel, pretium facilisis lectus. Aliquam ac hendrerit augue. Phasellus id erat a diam gravida vehicula. Morbi id turpis vel eros porttitor condimentum. Cras leo neque, dictum a suscipit at, accumsan non nibh. Aenean vel magna a felis cursus molestie. Phasellus suscipit turpis ac ornare accumsan. Vestibulum ex sapien, dictum in orci eu, accumsan tempor sapien. Cras ante ipsum, dapibus id malesuada sit amet, mattis ac lorem. Aliquam non finibus augue, ut hendrerit arcu. Pellentesque tincidunt eleifend elementum. Cras non neque sem.
        \nLorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis nunc quis elit egestas porta. Aenean pellentesque urna ac odio rhoncus, eu ultricies nisi feugiat. Sed imperdiet massa sit amet eros dictum, porttitor porttitor lacus rhoncus. Cras ac metus condimentum, tempor magna mattis, venenatis est. Etiam ut leo mattis, suscipit dolor sed, interdum libero. Maecenas ultrices tortor id leo dictum commodo. Curabitur nec justo eget enim molestie tristique. Praesent tristique pellentesque eros, non cursus tortor viverra a. \nVestibulum dapibus nibh in urna sodales, ut interdum turpis dictum.
        Donec id porta sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim purus rhoncus justo scelerisque blandit. Nullam consequat pellentesque tempor. Fusce quam ante, rutrum eu turpis eget, ullamcorper interdum enim. Curabitur consectetur urna at mi fermentum, a blandit turpis laoreet. Vivamus faucibus pharetra nunc efficitur mollis. Praesent arcu erat, consectetur at vestibulum non, tempor non urna. Nullam nec aliquet est, eu commodo massa. Morbi tellus urna, ultrices a malesuada vitae, ultricies in magna. Morbi eget ante consectetur, tincidunt nibh vel, pharetra est. Quisque condimentum vulputate velit, in ultrices orci consequat et. Nunc quis porttitor augue, et tincidunt enim. Etiam sit amet consequat sapien.
        \nSuspendisse vel arcu eget tortor suscipit iaculis. Sed vel sapien id diam tincidunt volutpat et sit amet lacus. Donec ornare erat odio, non placerat augue hendrerit quis. Vivamus pellentesque consequat lorem vitae porttitor. Curabitur quis congue mi. Pellentesque a diam id purus efficitur gravida sit amet ac dolor. Donec eleifend semper rhoncus. Integer convallis nibh non dolor molestie, at pellentesque urna porta. Proin sed condimentum nunc.
        \nNulla vestibulum, nunc vel malesuada maximus, leo purus luctus arcu, quis consectetur leo urna nec erat. Cras mollis convallis libero ac lacinia. Quisque auctor venenatis condimentum. Morbi eget nisl in lacus euismod scelerisque eget semper nisl. Aliquam egestas felis eget porta consequat. Nunc ac libero a nulla consectetur sagittis. Integer scelerisque, metus eget accumsan posuere, nisi orci dapibus risus, et volutpat sem arcu sit amet lacus. Suspendisse potenti. Etiam a justo magna. Nullam ut blandit lorem.
        \nPraesent maximus at enim at aliquam. Duis ex leo, pretium a justo vel, pretium facilisis lectus. Aliquam ac hendrerit augue. Phasellus id erat a diam gravida vehicula. Morbi id turpis vel eros porttitor condimentum. Cras leo neque, dictum a suscipit at, accumsan non nibh. Aenean vel magna a felis cursus molestie. Phasellus suscipit turpis ac ornare accumsan. Vestibulum ex sapien, dictum in orci eu, accumsan tempor sapien. Cras ante ipsum, dapibus id malesuada sit amet, mattis ac lorem. Aliquam non finibus augue, ut hendrerit arcu. Pellentesque tincidunt eleifend elementum. Cras non neque sem.
    </string>
</resources>
