<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeic"
            android:title="@string/home_label" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/aboutblackic"
            android:title="@string/about_label" />
        <item
            android:id="@+id/nav_what_to_do"
            android:icon="@drawable/windblackic"
            android:title="@string/tour_label" />
        <item
            android:id="@+id/nav_where_to_stay"
            android:icon="@drawable/bedblackic"
            android:title="@string/lodging_label" />
        <item
            android:id="@+id/nav_where_to_eat"
            android:icon="@drawable/eatblackic"
            android:title="@string/eat_label" />
        <item
            android:id="@+id/nav_public_services"
            android:icon="@drawable/hospitalblackic"
            android:title="@string/services_label" />

    </group>
    <group
        android:id="@+id/conf_group">
        <item
            android:id="@+id/nav_confs"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/conf_tag" />
    </group>



</menu>
