<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ListView
            android:id="@+id/menu_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:id="@+id/log_in_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/menu_list_view"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conf_log_title"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conf_log_subtitle"
                android:textAlignment="center" />
            <LinearLayout
                android:id="@+id/buttons_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">

                <Button
                    android:id="@+id/log_but"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onLogOpClicked"
                    android:text="@string/log_label" />

                <Button
                    android:id="@+id/reg_but"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onLogOpClicked"
                    android:text="@string/reg_but" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>
