<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="5"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/feedback_title"
                android:textAlignment="center"
                android:textColor="@color/pure_white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/username_rad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:checked="true"
                    android:text="@string/feedback_rad_name"
                    android:textColor="@color/pure_white" />

                <RadioButton
                    android:id="@+id/anon_rad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_rad_nony"
                    android:textColor="@color/pure_white" />

            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feedback_name_label"
                    android:textAlignment="center"
                    android:textColor="@color/pure_white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/username_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/pure_white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.3"
            android:orientation="vertical"
            android:weightSum="5"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/feedback_desc_label"
                android:textColor="@color/pure_white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.8"
                android:background="@color/lesser_white"
                android:ems="10"
                android:hint="Here goes your text"
                android:inputType="textMultiLine"
                android:textAlignment="center" />

            <Button
                android:id="@+id/send_but"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.7"
                android:text="@string/send_label" />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
