<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_view">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">
        <TableRow
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_marginBottom="2dp">
            <com.example.dc.navigation.views.LabeledImageButton
                android:id="@+id/events_but"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:backgroundSrc="http://www.osorio.rs.gov.br/uploads/midia/23948/maior_DSC_0033.jpg"
                app:title="@string/events_label"
                app:titleColor="@color/pure_white"
                app:iconSrc="@drawable/calendaric"
                app:backgroundColour="@color/semi_transparent_screen"/>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_marginBottom="2dp">

            <com.example.dc.navigation.views.LabeledImageButton
                android:id="@+id/whatdo_but"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:title="@string/tour_label"
                app:titleColor="@color/pure_white"
                app:iconSrc="@drawable/windturbineic"
                app:backgroundColour="@color/semi_transparent_screen"
                android:paddingEnd="2dp"
                app:backgroundSrc="http://www.osorio.rs.gov.br/uploads/pontoturistico/15399/maior_1.jpg"/>

            <com.example.dc.navigation.views.LabeledImageButton
                android:id="@+id/accom_but"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconSrc="@drawable/bedic"
                app:title="@string/lodging_label"
                app:titleColor="@color/pure_white"
                app:backgroundColour="@color/semi_transparent_screen"
                app:backgroundSrc="http://www.bighotelosorio.com.br/hotel.jpg"/>
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:weightSum="2">
            <com.example.dc.navigation.views.LabeledImageButton
                android:id="@+id/eat_but"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconSrc="@drawable/eatic"
                app:backgroundColour="@color/semi_transparent_screen"
                app:title="@string/eat_label"
                app:titleColor="@color/pure_white"
                android:paddingEnd="2dp"
                app:backgroundSrc="https://destemperados.clicrbs.com.br/arquivos/ckeditor/C4whh6QJk6tz4dpw2RJ/a-lenha-osorio-(3).jpg"/>

            <com.example.dc.navigation.views.LabeledImageButton
                android:id="@+id/services_but"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconSrc="@drawable/hospitalic"
                app:backgroundColour="@color/semi_transparent_screen"
                app:title="@string/services_label"
                app:titleColor="@color/pure_white"
                app:backgroundSrc="http://s2.glbimg.com/M-dLVt8QaLJ8ZC6TEGvyBCrcAl8=/300x225/s.glbimg.com/jo/g1/f/original/2012/11/16/hospital.jpg"/>
        </TableRow>
    </TableLayout>
</android.support.v4.widget.DrawerLayout>
