<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:id="@+id/menu_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp">
                <TableRow
                    android:weightSum="4">
                    <Button
                        android:id="@+id/button1"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tour_label"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/button2"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lodging_label"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/button3"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eat_label"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/button4"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/services_label"
                        android:layout_weight="1"/>
                </TableRow>
            </TableLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/menu_holder">

                <LinearLayout
                    android:id="@+id/holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp">
                        <ezy.ui.view.BannerView
                            android:id="@+id/places_banner_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/lesser_white"
                            android:onClick="bannerOnClick"
                            app:bvIndicatorColor="#cccccc"
                            app:bvIndicatorColorSelected="@color/colorAccent"
                            app:bvIndicatorGravity="center" />
                        <TextView
                            android:id="@+id/places_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:padding="10dp"
                            android:text="@string/places_label"
                            android:textAlignment="center"
                            android:textColor="@color/pure_white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:background="@color/semi_transparent_screen"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"/>
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp">

                        <ezy.ui.view.BannerView
                            android:id="@+id/events_banner_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@color/lesser_white"
                            android:onClick="bannerOnClick"
                            app:bvIndicatorColor="#cccccc"
                            app:bvIndicatorColorSelected="@color/colorAccent"
                            app:bvIndicatorGravity="center" />

                        <TextView
                            android:id="@+id/events_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"
                            android:background="@color/semi_transparent_screen"
                            android:fontFamily="sans-serif"
                            android:padding="10dp"
                            android:text="@string/events_label"
                            android:textAlignment="center"
                            android:textColor="@color/pure_white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>



</android.support.v4.widget.DrawerLayout>

